--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ header {
   position: -webkit-sticky;
   position: sticky;
   /* border: 2px solid greenyellow; */
-  width: auto;
   height: 4em;
   display: flex;
   justify-content: space-between;
@@ -38,11 +37,11 @@ body {
   background-image: url(images/bg-wlpar.jpg);
   width: 100%;
   -o-object-fit: contain;
-  object-fit: contain;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  object-fit: cover;
 
 }
 
