--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@
   font-family: "Alata", sans-serif;
   font-size: 16px;
 }
-
+a:focus{
+  text-decoration: none;
+}
 
 h1,
 h2,
@@ -36,6 +38,7 @@ body {
   background: rgba(0, 3, 7, 0.753);
   background-image: url(images/bg-wlpar.jpg);
   width: 100%;
+  height: 100vh;
   -o-object-fit: contain;
   background-repeat: no-repeat;
   background-size: cover;
