--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   padding: 0;
   font-family: 'Alata', sans-serif;
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 a:focus {
   text-decoration: none;
