--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ a {
 
 #logo {
   margin-left: 0.8em;
-  font-size: 1em;
+  font-size: larger;
   font-weight: bold;
   /* letter-spacing: -3.2px; */
   /* -webkit-text-decoration-line: underline; */
