--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ main {
   background-color: rgba(118, 129, 111, 0.507);
   backdrop-filter: blur(3px);
   margin: 20px 20px 0px 20px;
+  padding: 30px;
   border-radius: 15px;
 }
 h1 {
